# mcp-context-engine

./: .env.example  .gitignore  README.md  pyproject.bad.toml  pyproject.toml  requirements.txt
src/app/: main.py
src/app/core/: availability.py  config.py  errors.py  intent.py  logging.py  nlp.py  summarize.py  timeparse.py
src/app/providers/: base.py  calendar.py  calendar_ics.py  github.py  github_provider.py  notion.py  notion_provider.py
src/app/routers/: debug.py  query.py
src/app/schemas/: query.py
src/mcp_context_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_availability.py  test_slots.py
