[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-context-engine"
version = "0.0.1"
description = "An intent-aware context engine (MCP-style) for assembling external data into AI-ready context packages."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Rishabh Rohil"}]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "black>=24.8.0",
  "mypy>=1.11.0",
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "types-requests",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
